[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/register.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/login.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/characterSelectionSprites/initialScreenBackground.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/registerSprites/labelText.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/design.graffiti.SNAP____.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 5 )

[node name="login" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="background" parent="." index="0"]
texture = ExtResource( 3 )

[node name="emailLabel" type="Label" parent="." index="1"]
margin_left = 53.8008
margin_top = 72.4424
margin_right = 93.8008
margin_bottom = 86.4424
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.101961, 0.4, 0.631373, 1 )
text = "Email"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passwordLabel" type="Label" parent="." index="2"]
margin_left = 53.8008
margin_top = 108.271
margin_right = 93.8008
margin_bottom = 122.271
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.101961, 0.4, 0.631373, 1 )
text = "Senha"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="registerButton" parent="." index="3"]
visible = false

[node name="confirmLoginLabelEdit" parent="Container" index="3"]
visible = false

[node name="confirmLoginSprite" parent="Container" index="4"]
visible = false

[node name="confirmLoginLabel" parent="Container" index="5"]
visible = false

[node name="passwordLabelEdit" parent="Container" index="6"]
margin_top = 120.278
margin_bottom = 140.278

[node name="passwordSprite" parent="Container" index="7"]
position = Vector2( 72, 165.344 )

[node name="passwordLabel" parent="Container" index="8"]
margin_top = 123.231
margin_bottom = 138.231

[node name="notificationLabel" parent="Container" index="9"]
margin_top = 151.33
margin_bottom = 163.33

[node name="LoginButton" type="Button" parent="." index="6"]
margin_left = 49.4168
margin_top = 168.326
margin_right = 98.4168
margin_bottom = 188.326
focus_mode = 0
enabled_focus_mode = 0
text = "Entrar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LoginButton" index="0"]
position = Vector2( 24.6308, 46.0632 )
scale = Vector2( 0.16, 0.29 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="LoginButton" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.101961, 0.4, 0.631373, 1 )
text = "Entrar"
align = 1
valign = 1
[connection signal="pressed" from="LoginButton" to="." method="onLoginPressed"]
